# leaves

./: .gitignore  LICENSE  README.md  default.nix  leaves.cabal  nixpkgs.json  release-pr.nix  release.nix  shell.nix  spec.json
src/: Filter.hs  Ignore.hs  Main.hs  Types.hs  Util.hs
