name:                leaves
version:             0.0.1
synopsis:            Tree that displays file structure you actually care about
homepage:            https://github.com/hakujin/leaves
license:             BSD3
license-file:        LICENSE
author:              Colin King <richard.colin.king@gmail.com>
maintainer:          Colin King <richard.colin.king@gmail.com>
build-type:          Simple
cabal-version:       >=1.10

executable leaves
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       async,
                       bytestring,
                       hashable,
                       posix-paths,
                       regex-tdfa,
                       text,
                       unordered-containers

source-repository head
  type:     git
  location: https://github.com/hakujin/leaves
