name:                leaves
version:             0.0.1
synopsis:            Tree that displays file structure you actually care about
homepage:            https://github.com/hakujin/leaves
license:             BSD3
license-file:        LICENSE
author:              Colin King <richard.colin.king@gmail.com>
maintainer:          Colin King <richard.colin.king@gmail.com>
build-type:          Simple
cabal-version:       >=1.10

executable leaves
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  ghc-prof-options:    -fprof-auto
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       async,
                       bytestring,
                       directory,
                       hashable,
                       posix-paths,
                       regex-tdfa,
                       text,
                       unordered-containers

source-repository head
  type:     git
  location: https://github.com/hakujin/leaves
